adjust to new bndlib
...with the API change

Signed-off-by: Ferry Huberts <ferry.huberts@pelagic.nl>